<resources>
    <!-- Common String -->
    <string name="app_name">LoginDemo</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="contact_support">Contact Support</string>
    <string name="no_internet_connection">Your network is not working, please check and try again.</string>
    <string name="something_went_wrong">Our System is maintaining, please try again later.</string>
</resources>